fixed css error where items in header were overflowing

--- a/server/public/stylesheets/style.styl
+++ b/server/public/stylesheets/style.styl
@@ -12,7 +12,7 @@ a
   background-color:#E01
   color: #FFF
   width: 100%
-  height: 70px
+  min-height: 70px
   #title-wrap
     float: left
     margin: 10px
